# OpenGLSpiderProject

./: CMakeLists.txt  README.md  index.html
Spider on a Dock_files/: base.js.download  remote.js.download  zrqfosClpVI.html
resources/: simple_frag.glsl  simple_vert.glsl  tex_frag0.glsl  tex_frag1.glsl  tex_fragH.glsl  tex_vert.glsl
resources/hw_morning/: morning1_bk.tga  morning1_dn.tga  morning1_ft.tga  morning1_lf.tga  morning1_rt.tga  morning1_up.tga
src/: Constants.h  Entity.cpp  Entity.h  Shape.cpp  Shape.h  Spider.cpp  Spider.h  main.cpp
